[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/settings.gd" type="Script" id=1]
[ext_resource path="res://Misc/static.ogv" type="VideoStream" id=2]
[ext_resource path="res://Fonts/ComicSans.ttf" type="FontFile" id=5]

[sub_resource type="FontFile" id=3]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="FontFile" id=1]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxLine" id=5]
thickness = 10

[sub_resource type="StyleBoxLine" id=4]
color = Color( 1, 1, 1, 1 )
thickness = 10

[sub_resource type="StyleBoxLine" id=6]
color = Color( 1, 1, 1, 1 )
thickness = 10

[sub_resource type="StyleBoxLine" id=7]
color = Color( 1, 1, 1, 1 )
thickness = 10

[sub_resource type="StyleBoxLine" id=8]
color = Color( 1, 1, 1, 1 )
thickness = 10

[sub_resource type="FontFile" id=10]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="FontFile" id=11]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="FontFile" id=9]
size = 115
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="SettingsMenu" type="Popup"]
visible = true
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource( 1 )

[node name="background" type="VideoStreamPlayer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
stream = ExtResource( 2 )

[node name="LabelContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -324.0
offset_right = 500.0
offset_bottom = 526.0
theme_override_constants/separation = 58

[node name="MasterLabel" type="RichTextLabel" parent="LabelContainer"]
offset_right = 1000.0
offset_bottom = 59.0
theme_override_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
text = "[center]Master Volume[/center]"
text = "Master Volume"
fit_content_height = true

[node name="SFXLabel" type="RichTextLabel" parent="LabelContainer"]
offset_top = 117.0
offset_right = 1000.0
offset_bottom = 176.0
theme_override_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
text = "[center]SFX Volume[/center]"
text = "SFX Volume"
fit_content_height = true

[node name="MusicLabel" type="RichTextLabel" parent="LabelContainer"]
offset_top = 234.0
offset_right = 1000.0
offset_bottom = 293.0
theme_override_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
text = "[center]Music Volume[/center]"
text = "Music Volume"
fit_content_height = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -425.0
offset_right = 500.0
offset_bottom = 425.0
theme_override_constants/separation = 100

[node name="fs" type="Button" parent="VBoxContainer"]
offset_right = 1000.0
offset_bottom = 64.0
focus_mode = 0
theme_override_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
focus_mode = 0
text = "Toggle Fullscreen"
flat = true

[node name="Master" type="HSlider" parent="VBoxContainer"]
offset_top = 164.0
offset_right = 1000.0
offset_bottom = 180.0
theme_override_styles/slider = SubResource( 5 )
theme_override_styles/grabber_area_highlight = SubResource( 4 )
theme_override_styles/grabber_area = SubResource( 6 )
min_value = -30.0
max_value = 0.0

[node name="SFX" type="HSlider" parent="VBoxContainer"]
offset_top = 280.0
offset_right = 1000.0
offset_bottom = 296.0
theme_override_styles/slider = SubResource( 5 )
theme_override_styles/grabber_area_highlight = SubResource( 4 )
theme_override_styles/grabber_area = SubResource( 7 )
min_value = -30.0
max_value = 0.0

[node name="Music" type="HSlider" parent="VBoxContainer"]
offset_top = 396.0
offset_right = 1000.0
offset_bottom = 412.0
theme_override_styles/slider = SubResource( 5 )
theme_override_styles/grabber_area_highlight = SubResource( 4 )
theme_override_styles/grabber_area = SubResource( 8 )
min_value = -30.0
max_value = 0.0

[node name="FPS" type="Button" parent="VBoxContainer"]
offset_top = 512.0
offset_right = 1000.0
offset_bottom = 576.0
focus_mode = 0
theme_override_fonts/font = SubResource( 10 )
focus_mode = 0
text = "Show FPS"
flat = true

[node name="FPScap" type="Button" parent="VBoxContainer"]
offset_top = 676.0
offset_right = 1000.0
offset_bottom = 740.0
focus_mode = 0
theme_override_fonts/font = SubResource( 11 )
focus_mode = 0
text = "Limit FPS"
flat = true

[node name="back" type="Button" parent="."]
offset_left = 21.0
offset_top = 19.0
offset_right = 265.0
offset_bottom = 158.0
theme_override_fonts/font = SubResource( 9 )
text = "Back"
flat = true

[connection signal="finished" from="background" to="." method="_on_background_finished"]
[connection signal="pressed" from="VBoxContainer/fs" to="." method="_on_fs_pressed"]
[connection signal="value_changed" from="VBoxContainer/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SFX" to="." method="_on_SFX_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Music" to="." method="_on_Music_value_changed"]
[connection signal="pressed" from="VBoxContainer/FPS" to="." method="_on_FPS_pressed"]
[connection signal="pressed" from="VBoxContainer/FPScap" to="." method="_on_FPScap_pressed"]
[connection signal="pressed" from="back" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
